profile pic changed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body class="">
 
         <div class="container">    
-        <img class="avatar" src="https://github.com/Nicolas-Formenton.png" alt="Nicolas">
+        <img class="avatar" src="./3976.png" alt="BestBud 3976">
            
         <h1 class="dark">Nicolas</h1>
     
